[package]
name = "truesocks"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["truesocks", "truesocks SDK", "truesocks API"]
categories = ["api-bindings"]
publish = true
description = " A Rust SDK for truesocks API"
homepage = "https://github.com/c0dn/truesocks_rs"
repository = "https://github.com/c0dn/truesocks_rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "socks", "gzip", "deflate", "brotli"] }
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
tokio = { version = "1.26.0", features = ["full"] }
json = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"